app/app01/app01-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-service
spec:
  selector:
    app: ant01
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30001
