app/app01/app01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-service
spec:
  selector:
    app: ant01
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
