app/app01/ubuntu-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    app: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    ports:
    - containerPort: 7465
---
apiVersion: v1
kind: Service
metadata:
  name: ubuntu
spec:
  ports:
  - port: 7465
    targetPort: 7465
    protocol: TCP
  selector:
    app: ubuntu
